# cclens

./: CLAUDE.md  Cargo.toml  README.md  clippy.toml  git-town.toml  justfile  mise.toml
src/: aggregation.rs  attribution.rs  cli.rs  discovery.rs  domain.rs  filter.rs  inventory.rs  lib.rs  main.rs  parsing.rs  pricing.rs  rendering.rs
tests/: cost.rs  filters.rs  inputs.rs  listing.rs  pricing.rs  snapshots.rs
tests/common/: mod.rs
tests/fixtures/cost-projects/-Users-test-cost/: aaaa7777-7777-7777-7777-777777777777.jsonl  bbbb8888-8888-8888-8888-888888888888.jsonl  eeee9999-9999-9999-9999-999999999999.jsonl  ffff6666-6666-6666-6666-666666666666.jsonl
tests/fixtures/dedup-projects/delta/: dddd0001-0001-0001-0001-000000000001.jsonl  dddd0002-0002-0002-0002-000000000002.jsonl
tests/fixtures/inputs-projects/-test-inputs/: aaaa1111-1111-1111-1111-111111111111.jsonl  bbbb2222-2222-2222-2222-222222222222.jsonl  cccc3333-3333-3333-3333-333333333333.jsonl
tests/fixtures/pricing/: litellm-empty.json  litellm-mini.json
tests/fixtures/projects/-Users-test-alpha/: aaaa1111-1111-1111-1111-111111111111.jsonl
tests/fixtures/projects/-Users-test-beta/: bbbb2222-2222-2222-2222-222222222222.jsonl  dddd4444-4444-4444-4444-444444444444.jsonl  eeee5555-5555-5555-5555-555555555550.jsonl
tests/fixtures/projects/-Users-test-beta/eeee5555-5555-5555-5555-555555555550/subagents/: agent-1.jsonl  agent-1.meta.json  agent-2.jsonl  agent-2.meta.json
tests/fixtures/projects/-Users-test-gamma/: cccc3333-3333-3333-3333-333333333333.jsonl
tests/fixtures/projects/-Users-test-show/: eeee5555-5555-5555-5555-555555555555.jsonl
tests/fixtures/snapshot-projects/: pricing-catalog.json
tests/fixtures/snapshot-projects/-Users-test-snap/: aaaa0001-0001-0001-0001-000000000001.jsonl  bbbb0002-0002-0002-0002-000000000002.jsonl  cccc0003-0003-0003-0003-000000000003.jsonl  dddd0004-0004-0004-0004-000000000004.jsonl  eeee0005-0005-0005-0005-000000000005.jsonl
tests/fixtures/snapshot-projects/-Users-test-snap/eeee0005-0005-0005-0005-000000000005/subagents/: agent-1.jsonl  agent-2.jsonl
tests/snapshots/: snapshots__inputs_snapshot.snap  snapshots__list_snapshot.snap  snapshots__show_snapshot.snap  snapshots__show_snapshot_with_subagents.snap
