[package]
name = "cclens"
version = "0.1.0"
edition = "2024"
description = "Browse Claude Code conversation history from the terminal"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
# `unstable-dynamic`: gates the runtime completer API; may break across minor versions.
clap_complete = { version = "4", features = ["unstable-dynamic"] }
comfy-table = "7.2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.11"
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
assert_cmd = "2"
filetime = "0.2"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
regex = "1"

[lints.clippy]
# Lint groups at priority -1 so individual overrides below take precedence.
complexity = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# restriction lints (priority 0 — not in any group, must be opted into explicitly).
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
wildcard_enum_match_arm = "deny"
